# creative_workforce

./: .gitignore  AGENTS.md  README.md
.serena/: project.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  conversation.py  image.py  prompts.py  registry.py  text.py
backend/app/api/: chat.py  projects.py  router.py
backend/app/core/: db.py  dependencies.py  settings.py  templates.py
backend/app/models/: __init__.py  artifacts.py  chat.py  projects.py
backend/app/services/: __init__.py  artifacts.py  base.py  conversation.py  gcp.py  image.py  llm.py  local.py  progress.py  projects.py
backend/app/workers/: router.py
backend/data/: poc.db
backend/data/artifacts/projects/1/background_sample/: v001.md
backend/data/artifacts/projects/1/episodes/01/episode_summary/: v001.md
backend/data/artifacts/projects/1/overall_spec/: v001.md
backend/data/artifacts/projects/2/background_sample/: v001.md
backend/data/artifacts/projects/2/episodes/01/episode_summary/: v001.md  v002.md
backend/data/artifacts/projects/2/overall_spec/: v001.md
backend/scripts/: __init__.py  run_dev.py
backend/tests/: test_health.py
backend/tests/agents/: test_langgraph_agents.py
backend/tests/api/: test_chat_api.py  test_projects_api.py
backend/tests/core/: test_db.py  test_dependencies.py
backend/tests/services/: test_artifact_service.py  test_gcp_services.py  test_local_services.py  test_progress_service.py  test_project_service.py
backend/tests/workers/: test_image_worker.py
config/env/: .env.example  .env.gcp.example  .env.local.example
config/prompts/: project_spec.md
documents/: PoC仕様書.md  TODO.md  chat-conversation-spec.md  creative_workforce-system-spec.md  frontend-ui-walkthrough.md  frontend-uiux-plan.md  アーキテクチャ.md  スタートガイド.md  ディレクトリとアーキテクチャ案.md  提案書.md
documents/初期書類/: 企画書.md
documents/技術スタック資料/: LLMプロバイダ.md  インフラとストレージ.md  データ管理と検索.md  バックエンドとエージェント.md  フロントエンド.md  メディア生成.md  ワークフロー管理.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
infrastructure/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml
scripts/: setup_local.sh
(+23 files in other folders)
